hard-gists/1561144/run.log
=== Docker Run Log for 1561144 ===
Started at: Mi 29. Okt 12:18:51 CET 2025

[2025-10-29 12:18:52] START: Running container for 1561144
[2025-10-29 12:18:52] SUCCESS: Container 4af15945a3dd4df9d5c008f096f46094357c9ce4dd3adff75e1baa4657e33f6e started for 1561144
=== Container logs for 1561144 ===
  File "/snippet.py", line 39
    if Verbose: print 'Section 4 of More and Thuente'
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1561144 ===
[2025-10-29 12:18:54] INFO: Container 4af15945a3dd4df9d5c008f096f46094357c9ce4dd3adff75e1baa4657e33f6e has stopped
